Улучшил вывод, добавио контроль ошиьок на последнем шаге и мини прогрессбар

--- a/SQL2Word/SQL2Word.csproj
+++ b/SQL2Word/SQL2Word.csproj
@@ -39,6 +39,9 @@
     <Reference Include="DocX">
       <HintPath>..\packages\DocX.1.0.0.13\lib\net40\DocX.dll</HintPath>
     </Reference>
+    <Reference Include="SmartFormat">
+      <HintPath>..\packages\SmartFormat.NET.1.1.0.0\lib\net35-Client\SmartFormat.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
