--- a/SQL2Word/packages.config
+++ b/SQL2Word/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net45" requireReinstallation="True" />
   <package id="DocX" version="1.0.0.13" targetFramework="net45" />
+  <package id="SmartFormat.NET" version="1.1.0.0" targetFramework="net40" />
 </packages>
