Добавил новый флаг REPLACE_TABLE_ON_EMPTY

--- a/SQL2Word/SQL2Word.csproj
+++ b/SQL2Word/SQL2Word.csproj
@@ -39,9 +39,6 @@
     <Reference Include="DocX">
       <HintPath>..\packages\DocX.1.0.0.13\lib\net40\DocX.dll</HintPath>
     </Reference>
-    <Reference Include="SmartFormat">
-      <HintPath>..\packages\SmartFormat.NET.1.1.0.0\lib\net35-Client\SmartFormat.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -66,6 +63,7 @@
     <None Include="files\base2.docx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="files\ПОДД-2014-город.docx" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
