--- a/SQL2Word/packages.config
+++ b/SQL2Word/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommandLineParser" version="1.9.71" targetFramework="net45" requireReinstallation="True" />
-  <package id="DocX" version="1.0.0.13" targetFramework="net45" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net35-Client" />
+  <package id="DocX" version="1.0.0.13" targetFramework="net35-Client" />
 </packages>
