Добавил README.md в проект

--- a/SQL2Word/SQL2Word.csproj
+++ b/SQL2Word/SQL2Word.csproj
@@ -98,6 +98,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="output\" />
